ver3.0.0 バージョンアップ (#8)
* Set up dev tools, and add `README.md` (#4)

* Initialize npm, and set up dev tools

* Fix rollup.config.js

* Fix typo

* Add README.md

* bug fix (#5)

* bug fix

* bug fix

* シラバスでサジェストを有効化

* ScombZ内で動的操作終了後にページを表示する機能 (#6)

* ScombZ内で動的操作終了後にページを表示する機能

ページ読み込み前にvisibility:hidden;に設定し、DOM操作が終わってからvisibility:visible;に戻すようにした。
特に、サイドメニューはページ読み込み時はDOM読み込み前に閉じていて、transition:none;に設定していても動いて見えるブラウザもあったので、表示までにHTML読み込み完了から300ms待機することで対応した。
画面を更新したときにちらつく問題があるため、今後の課題(フェードインフェードアウトなどで対応？)

* ファイル位置が間違っていたため修正

* ファイル位置が間違っていたため修正

* Update manifest.json

* ポップアップのスタイルを変更、シラバスリンクの正確性およびUI向上 (#7)

* Add files via upload

* シラバスの正確性の向上と、Ajaxによるユーザビリティの向上

* Add files via upload

Co-authored-by: Meiryo7743 <46659204+Meiryo7743@users.noreply.github.com>

--- a/ScombZ Utilities/manifest.json
+++ b/ScombZ Utilities/manifest.json
@@ -1,7 +1,7 @@
 {
     "manifest_version":3 ,
     "name": "ScombZ Utilities",
-    "version": "3.0.0",
+    "version": "3.0.2",
     "description": "ScombZをカスタムする拡張機能",
     "icons": { 
         "48":  "icons/icon48.png",
@@ -21,6 +21,7 @@
                 "js/syllabus.js",
                 "main.js",
                 "lib/encoding/encoding.min.js",
+                "lib/jquery/jquery-3.6.0.min.js",
                 "js/clickLogin.js",
                 "js/addSubTimetable.js",
                 "js/changeReportBtn.js",
